; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_ip17xx.c_ip17xx_remove.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_ip17xx.c_ip17xx_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy_device = type { %struct.ip17xx_state* }
%struct.ip17xx_state = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.phy_device*)* @ip17xx_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ip17xx_remove(%struct.phy_device* %0) #0 {
  %2 = alloca %struct.phy_device*, align 8
  %3 = alloca %struct.ip17xx_state*, align 8
  store %struct.phy_device* %0, %struct.phy_device** %2, align 8
  %4 = load %struct.phy_device*, %struct.phy_device** %2, align 8
  %5 = getelementptr inbounds %struct.phy_device, %struct.phy_device* %4, i32 0, i32 0
  %6 = load %struct.ip17xx_state*, %struct.ip17xx_state** %5, align 8
  store %struct.ip17xx_state* %6, %struct.ip17xx_state** %3, align 8
  %7 = load %struct.ip17xx_state*, %struct.ip17xx_state** %3, align 8
  %8 = getelementptr inbounds %struct.ip17xx_state, %struct.ip17xx_state* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %1
  %12 = load %struct.ip17xx_state*, %struct.ip17xx_state** %3, align 8
  %13 = getelementptr inbounds %struct.ip17xx_state, %struct.ip17xx_state* %12, i32 0, i32 0
  %14 = call i32 @unregister_switch(i32* %13)
  br label %15

15:                                               ; preds = %11, %1
  %16 = load %struct.ip17xx_state*, %struct.ip17xx_state** %3, align 8
  %17 = call i32 @kfree(%struct.ip17xx_state* %16)
  ret void
}

declare dso_local i32 @unregister_switch(i32*) #1

declare dso_local i32 @kfree(%struct.ip17xx_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
